# Mask-Detector

./: CMakeLists.txt  README.md
include/: display.hpp  faceDetector.hpp  mouthDetector.hpp
src/: CMakeLists.txt  install.sh  main.cpp
